--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="wrapper">
 
         <div class="container">
-
+            <img src="logo.png" class="site-logo" alt="Logo">
             <h2>Password Strength Checker</h2>
             <p class="subtext">Your password is checked locally. <br>
                 <strong>No data is saved or sent anywhere.</strong>
