--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Password Strength Checker</title>
-
     <link rel="stylesheet" href="style.css">
-
-    <!-- Floating Particle Background -->
     <style>
-    /* --- Cyber Floating Particles Background --- */
     body {
-        background: #0c0c16; /* dark base */
+        background: #0c0c16;
         overflow: hidden;
         position: relative;
     }
-
-    /* particle container */
     .particles {
         position: fixed;
         top: 0;
@@ -28,7 +22,6 @@
         overflow: hidden;
         z-index: -1;
     }
-
     .particle {
         position: absolute;
         width: 6px;
@@ -38,7 +31,6 @@
         box-shadow: 0 0 10px rgba(0,255,255,0.8);
         animation: floatUp linear infinite;
     }
-
     @keyframes floatUp {
         0% {
             transform: translateY(100vh) scale(0.7);
@@ -55,29 +47,21 @@
     </style>
 </head>
 <body>
-
-    <!-- Floating particles generated in JS -->
     <div class="particles"></div>
-
     <div class="wrapper">
-
         <div class="container">
             <h2>Password Strength Checker</h2>
             <p class="subtext">Your password is checked locally. <br>
                 <strong>No data is saved or sent anywhere.</strong>
             </p>
-
             <div class="input-box">
                 <input type="password" id="password" placeholder="Enter your password" oninput="checkPasswordStrength()">
                 <span id="toggle" onclick="togglePassword()">🙉</span>
             </div>
-
             <div class="strength-meter">
                 <div id="meter-bar"></div>
             </div>
-
             <p id="strength-msg"></p>
-
             <h3>Password Requirements</h3>
             <ul class="rules">
                 <li id="len"><span class="icon">✖</span> Minimum 8 characters</li>
@@ -86,40 +70,26 @@
                 <li id="num"><span class="icon">✖</span> At least one number</li>
                 <li id="special"><span class="icon">✖</span> At least one special character</li>
             </ul>
-
         </div>
-
         <footer>
             <p>This tool runs entirely in your browser. No passwords are saved or transmitted.</p>
             <p class="small">Made by Vempali Hrishita for secure password practices</p>
         </footer>
-
     </div>
-
     <script src="script.js"></script>
 
-    <!-- Particle Generation Script -->
     <script>
         const particleContainer = document.querySelector(".particles");
 
         function createParticle() {
             const particle = document.createElement("div");
             particle.classList.add("particle");
-
-            // random position
             particle.style.left = Math.random() * 100 + "vw";
-
-            // random size
             const size = Math.random() * 4 + 3;
             particle.style.width = size + "px";
             particle.style.height = size + "px";
-
-            // random duration
             particle.style.animationDuration = (Math.random() * 7 + 4) + "s";
-
             particleContainer.appendChild(particle);
-
-            // remove after animation
             setTimeout(() => {
                 particle.remove();
             }, 11000);
@@ -127,6 +97,5 @@
 
         setInterval(createParticle, 70);
     </script>
-
 </body>
 </html>
